@@ -1,7 +1,0 @@
-#!/bin/sh
-# Run this to generate all the initial makefiles, etc.
-
-aclocal
-autoheader
-autoconf
-automake
